# merian-quake

./: .gitignore  .gitmodules  LICENSE  README.md  compile_and_run.bat  merian-quake.sublime-project  meson.build  meson.options  pyproject.toml  vk_layer_settings.txt
dittebrandt/render_mc/: grid.h  layout.glsl  quake.comp  render_markovchain.cpp  render_markovchain.hpp  volume.comp
quakedir/ad/: quake.rc
quakedir/id1/: autoexec.cfg  config.cfg
res/: default_config.json
res/shader/: hit.glsl.h  raytrace.glsl
res/shader/gbuffer/: gbuffer.comp
res/shader/render_mc/: grid.h  layout.glsl  light_cache.glsl  mc.glsl  quake.comp  volume.comp
res/shader/render_mcpg/: clear.comp  compute_updates.comp  grid.h  layout.glsl  light_cache.glsl  mc.glsl  mc_distance.glsl  mcpg.comp  volume.comp  volume_forward_project.comp
res/shader/render_restir/: layout.glsl  restir_di.glsl  restir_di_clear.comp  restir_di_common.glsl  restir_di_generate_samples_bsdf.comp  restir_di_reservoir.glsl.h  restir_di_shade.comp  restir_di_spatial_reuse.comp  restir_di_temporal_reuse.comp
res/shader/render_ssmm/: clear.comp  layout.glsl  ssmc_state.h  ssmm.comp
scripts/: combine_images.py  draine_parameters.py  duckdb queries.md  error_plot.py  evaluate_lc.py  evaluate_lc_fast.py  evaluate_locking_fast.py  expose.py  lineplot.py  run_experiments.py
src/: configuration.hpp  hit.glsl.h  main.cpp  merian-quake-headless.cpp  merian-quake.cpp  meson.build  processing_graph.hpp  raytrace.glsl  scene_info.glsl.h
src/game/: meson.build  quake_helpers.cpp  quake_helpers.hpp  quake_node.cpp  quake_node.hpp
src/gbuffer/: gbuffer.comp  gbuffer.cpp  gbuffer.hpp  meson.build
src/hud/: hud.comp  hud.cpp  hud.hpp  meson.build
src/post/: meson.build  post.comp  post.cpp  post.hpp
src/quake/: clear.comp  config.h  envmap.glsl  gbuf.comp  grid.h  layout.glsl  light_cache.glsl  mc.glsl  mc_distance.glsl  meson.build  quake.comp  quake_node.cpp  quake_node.hpp  quake_old.comp  raytrace.glsl  shading.glsl  volume.comp  volume_forward_project.comp
src/render_mc/: clear.comp  grid.h  layout.glsl  mc.glsl  meson.build  quake.comp  raytrace.glsl  render_markovchain.cpp  render_markovchain.hpp  volume.comp  volume_forward_project.comp
src/render_mcpg/: meson.build  render_mcpg.cpp  render_mcpg.hpp
src/render_restir/: clear.comp  generate_samples.comp  layout.glsl  meson.build  renderer_restir.cpp  renderer_restir.hpp  reservoir.glsl.h  restir_di.glsl  restir_di_generate_samples_bsdf.comp  restir_di_reservoir.glsl.h  restir_di_shade.comp  restir_di_spatial_reuse.comp  restir_di_temporal_reuse.comp
src/render_ssmm/: LICENSE  meson.build  render_ssmm.cpp  render_ssmm.hpp
src/renderer/: config.h  layout.glsl  mc.glsl  meson.build  raytrace.glsl  render_markovchain.cpp  render_markovchain.hpp
subprojects/: fmt.wrap  glfw.wrap  sdl2.wrap
