[tool.poetry]
name = "merian-quake-experiments"
version = "0.1.0"
description = ""
authors = ["Lucas Alber <lucasd.alber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
imageio = "^2.31.5"
numpy = "^1.26.0"
pandas = "^2.1.1"
tqdm = "^4.66.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
